# typforge

./: .gitignore  Cargo.toml  readme.md  release_up.md  settings.json  todo.md  untitled_1.typ
.github/workflows/: release.yml
crates/typforge/: Cargo.toml
crates/typforge-core/: Cargo.toml
crates/typforge-core/.prompts/: setup.md
crates/typforge-core/src/: edit.rs  format.rs  intel.rs  lib.rs
crates/typforge/documents/: animated_gif.typ  colors.typ
crates/typforge/src/: actions.rs  key_bindings.rs  main.rs  settings.rs  typst_world.rs
crates/typforge/src/components/: lsp.rs  menus.rs  mod.rs  theme.rs
crates/typforge/src/editor/: code_editor.rs  mod.rs
crates/typforge/src/editor/editor_panel/: completions.rs  mod.rs  render.rs
crates/typforge/src/panels/: files.rs  mod.rs
crates/typforge/src/ribbon/: injector.rs  mod.rs  panel.rs  tab_home.rs  tab_insert.rs  tab_layout.rs
crates/typforge/src/workspace/: handlers.rs  mod.rs  render.rs
crates/typsdocx/: Cargo.toml
crates/typsdocx/src/: lib.rs
crates/typst-gpui/: Cargo.toml
crates/typst-gpui/src/: lib.rs
crates/typst-gpui/src/typst_element/: mod.rs  typst_curve.rs  typst_point.rs  utils.rs
crates/typstography/: Cargo.toml
crates/typstography/src/: completion.rs  gpui_bridge.rs  lib.rs  utils.rs
documents/: hello.typ  page_layout.typ  typst.typ  variable_text.typ
documents/Deep_dark/: _main.typ  chapter-1.typ  chapter-2.typ  chapter-3.typ  chapter-4.typ  chapter-5.typ  chapter-6.typ  chapter-7.typ  chapter-8.typ  chapter-9.typ
documents/math/: maths.typ
prior_to_rollback/: code_editor.rs  lib.rs  mod-edit-panel.rs  mod-workspace.rs  render-edit-panel.rs
themes/: one.json  readme.md
