[workspace.package]
version = "0.0.1"
authors = ["Flint <flint6872@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"             # This is the magic line

[workspace]
resolver = "2"

members = [
    "crates/typforge",
    "crates/typsdocx",
    "crates/typst-gpui",
    "crates/typstography",
]


[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" } # NEW: Use Zed's GPUI directly
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] } # NEW: gpui-component might also imply this
gpui_macros = { git = "https://github.com/zed-industries/zed" } # NEW: If you use gpui_macros

# gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
#     "tree-sitter-languages",
# ] }

gpui-component = { path = "../gpui-component/crates/ui", features = [
    "tree-sitter-languages",
] }

# gpui-component = { git = "https://github.com/Flint6872/gpui-component", features = [
#     "tree-sitter-languages",
# ] }

typst = "0.14.2"
chrono = "0.4.44"

tower-lsp = "0.20"
lsp-types = "0.97.0"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Keep dependencies fast even in debug mode
[profile.dev.package."*"]
opt-level = 3
