[package]
name = "typforge"
version = "0.0.3"
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.44"

gpui.workspace = true
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    # "font-kit", #removed due to linux build issues
    "x11",
    "wayland",
    "runtime_shaders",
] } # NEW: gpui-component might also imply this
gpui_macros = { git = "https://github.com/zed-industries/zed" } # NEW: If you use gpui_macros

gpui_util = "0.2.2"
gpui-component.workspace = true

gpui-component-assets = "0.5.1"
typst-gpui = { path = "../typst-gpui" }

tower-lsp.workspace = true
lsp-types.workspace = true
tokio.workspace = true
parking_lot.workspace = true
ropey = "2.0.0-beta.1"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }

typstography = { path = "../typstography" }

anyhow = "1.0" # Added for consistent error handling in main

typst = "0.14.2"
typst-kit = { version = "0.14", features = [
    "fonts",
    "embed-fonts",
    "vendor-openssl",
] }
