[package]
name = "typforge"
version = "0.0.3"
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.44"

gpui.workspace = true
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] } # NEW: gpui-component might also imply this
gpui_macros = { git = "https://github.com/zed-industries/zed" } # NEW: If you use gpui_macros


gpui_util = "0.2.2"
gpui-component.workspace = true
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

typst-gpui = { path = "../typst-gpui" }
typforge-core = { path = "../typforge-core" }

parking_lot.workspace = true
ropey = "2.0.0-beta.1"
serde_json = "1.0.149"
serde.workspace = true


anyhow = "1.0" # Added for consistent error handling in main

typst.workspace = true
typst-layout.workspace = true
typst-kit = { version = "0.15.0", features = ["scan-fonts", "embedded-fonts"] }

lsp-types = "0.97.0"
