[package]
name = "typsdocx"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
typst.workspace = true
typst-layout.workspace = true
docx-rs = "0.4.19"
# We use IndexMap to preserve insertion order while grouping by Y-coord
indexmap = "2.13.0"
