[package]
name = "typstography"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
typst.workspace = true

comemo = "0.5" # Typst's memoization library, often needed

tokio.workspace = true
lsp-types.workspace = true
tower-lsp.workspace = true
parking_lot.workspace = true

gpui-component.workspace = true
